[package]
name = "client_request"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["nagaraj-manjunath"]
description = "Rust implimentation for API"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
thiserror = "1.0.26"
log = "0.4.14"
async-trait = "0.1.50"
jsonrpc-core = "18.0.0"

[dev-dependencies]
tokio = { version = "1.9", features = ["macros"] }